bk_ida/gccida/g1/expand_builtin_expect_jump
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_expect_jump/src/builtins.c:3924:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_expect_jump/src/builtins.c:3926:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_expect_jump/src/builtins.c:3941:21: error: expected expression
v5 = *( tree_node **)( *high + 32LL); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_expect_jump/src/builtins.c:3941:9: error: use of undeclared identifier 'tree_node'
v5 = *( tree_node **)( *high + 32LL); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_expect_jump/src/builtins.c:3945:19: error: expected expression
v8 = ( tree_node *)high[4]; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_expect_jump/src/builtins.c:3945:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)high[4]; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_expect_jump/src/builtins.c:3978:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = ( __int64)v13[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_expect_jump/src/builtins.c:4022:47: error: use of undeclared identifier 'prediction'; did you mean 'predict_insn'?
predict_insn_def( v12, PRED_BUILTIN_EXPECT, ( prediction)taken); 
                                              ^~~~~~~~~~
                                              predict_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_expect_jump/src/predict.h:39:13: note: 'predict_insn' declared here
extern void predict_insn        PARAMS ((rtx, enum br_predictor, int));
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_expect_jump/src/builtins.c:4022:58: error: expected ')'
predict_insn_def( v12, PRED_BUILTIN_EXPECT, ( prediction)taken); 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_expect_jump/src/builtins.c:4022:17: note: to match this '('
predict_insn_def( v12, PRED_BUILTIN_EXPECT, ( prediction)taken); 
                ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_expect_jump/src/obj/builtins.o] Error 1
